@@ -1,5 +1,13 @@
 2022-07-18 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
+	* src/pdk/gen.c,
+	  src/stm8/gen.c,
+	  src/z80/gen.c,
+	  support/regression/tests/bug-3461.c:
+	  Fix bug #3461.
+
+2022-07-18 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
 	* support/regression/tests/bug-3410.c.in:
 	  Disable a test for mos6502, since that port it still lacks _BitInt.
 	* support/regression/tests/bug-3461.c:
